--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Todo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
